# Final_CV

./: .gitignore  CMakeLists.txt  README.md  cascadeutils.py  datasets.py  detect  detection_frontalface.py  detection_frontalside.py  detection_sideface.py  eval_frcnn.py  groundtruth.txt  model_frcnn.pth  neg.txt  output  pos.vec  positives.txt  poslabel.py  requirements.txt  train_frcnn.py
annotations/: 1-500x500_jpg.rf.3ad4b0d86a75b6d60207fd510cc06c81.jpg.json  61dbLLwv-uL_jpg.rf.2015cca6ccf5af0d96ca9f0bc8c1ddc1.jpg.json  67409_jpg.rf.b8cd590d79c6d50fc35e8c1e9ecf19df.jpg.json  7807503254_9d54ae414f_z_png.rf.6ee06ac3aeac2c06cd28acb6e6576e19.jpg.json  8d0f89b8504387af6c815ce75c9337115c51c6ea2ec11_1260x1260_jpg.rf.8d91812aa6b7695512c623e6ac662ea2.jpg.json  Cherries1_jpg.rf.e72d62db506ba26949eb0b3f0471383a.jpg.json  DSCF1821_png.rf.58b8e23f1cd9b95d25872aed157eda5c.jpg.json  SweetCherries_jpg.rf.c53b42bb22b4eabc053e3576dcd3813d.jpg.json  TOro_Blueberry_2_720x_jpg.rf.d7fd0af9d82897c339eb5a965f84e906.jpg.json  ar130598387413248_png.rf.4ff0859e9aed8816dc1d9263e55069fb.jpg.json  blptch1_jpg.rf.a0b946a2dc996c12a782423f3fd2d55f.jpg.json  blueberry-vaccinium-nelson-9cm-p3876-30388_image_png.rf.fc1a71173370b72a107aa4bfb4c7e809.jpg.json  strawberries_png.rf.685d206f75087916563b0dcbb735860b.jpg.json  unnamed_jpg.rf.29eb808ecd7ded39fa2290be6f0c5187.jpg.json
cascade/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  (+2 more)
(+517 files in other folders)
